5.1.6 -> 5.1.7:
    - afb: backport macosx ldflags fixes.
    - glen: markLinkedFailed if rpm file reopen failed during transaction to avoid losing old pkg info from db
    - jbj: add rpmdsNSType() to -lrpm loader map.
    - jbj: update po files (Translation Project).
    - jbj: update PO and doxygen manifests.
    - jbj: include rpmgrep.1 with "make dist".
    - rpm.org: Don't try to create "" directories.
    - rpm.org: Don't bother calculating string sizes manually.
    - rpm.org: memory used by lua gets freed (just remove comment).
    - rpm.org: repeated read config -> free config needs globalLuaState == NULL.
    - rpm.org: Fix buffer overflow on oversized filelist entries(susebz#397006).
    - jbj: pcre: finalize --with-pcre=internal building.
    - jbj: pcre: punish PLD with internal bloat until the trivial AutoFu exists.
    - jbj: rpmdigest: avoid segfault on named pipes and other uglix fauna.
    - jbj: rpmbuild: use anchored patterns for data validation.
    - jbj: run "make check" to self consistency. worksforme.
    - jbj: add --whatneeds/--needswhat popt aliases.
    - jbj: backport the test harness for signature(). worksforme.
    - jbj: rpmbuild: enumerate all the lexical patterns in parsePreamble().
    - jbj: rpmbuild: enable pattern validation for simple package identifiers.
    - jbj: rpmbuild: add tag data validation pattern checks.
    - jbj: EVRtuple: handle EVR_t opaquely in python labelCompare().
    - jbj: EVRtuple: postpone committing to single "missing" value for now.
    - jbj: EVRtuple: attempt rpmEVRparse() during parseRCPOT().
        no error returns from rpmEVRparse() to trigger the message yet, todo++.
    - jbj: EVRtuple: teach --whatneeds/--needswhat to use EVR_t opaquely.
    - jbj: EVRtuple: add rpmEVR{new,free} creator and destructors.
    - jbj: EVRtuple: mark the old EVRD parser for destruction.
    - jbj: EVRtuple: use the new EVRD pattern parser, reverse the assert check.