@@ -59,53 +59,6 @@ int _psm_threads = 0;
 
 /*@access rpmluav @*/
 
-int rpmVersionCompare(Header first, Header second)
-{
-    HE_t he = memset(alloca(sizeof(*he)), 0, sizeof(*he));
-    const char * one, * two;
-    uint32_t Eone, Etwo;
-    int rc;
-    int xx;
-
-    he->tag = RPMTAG_EPOCH;
-    xx = headerGet(first, he, 0);
-    Eone = (xx && he->p.ui32p ? he->p.ui32p[0] : 0);
-    he->p.ptr = _free(he->p.ptr);
-    he->tag = RPMTAG_EPOCH;
-    xx = headerGet(second, he, 0);
-    Etwo = (xx && he->p.ui32p ? he->p.ui32p[0] : 0);
-    he->p.ptr = _free(he->p.ptr);
-
-    if (Eone < Etwo)
-	return -1;
-    else if (Eone > Etwo)
-	return 1;
-
-    he->tag = RPMTAG_VERSION;
-    xx = headerGet(first, he, 0);
-    one = he->p.str;
-    he->tag = RPMTAG_VERSION;
-    xx = headerGet(second, he, 0);
-    two = he->p.str;
-    rc = rpmvercmp(one, two);
-    one = _free(one);
-    two = _free(two);
-    if (rc)
-	return rc;
-
-    he->tag = RPMTAG_RELEASE;
-    xx = headerGet(first, he, 0);
-    one = he->p.str;
-    he->tag = RPMTAG_RELEASE;
-    xx = headerGet(second, he, 0);
-    two = he->p.str;
-    rc = rpmvercmp(one, two);
-    one = _free(one);
-    two = _free(two);
-
-    return rc;
-}
-
 /**
  * Mark files in database shared with this package as "replaced".
  * @param psm		package state machine data
@@ -2434,6 +2387,10 @@ assert(psm->te != NULL);
 	    (void) rpmswAdd(rpmtsOp(ts, RPMTS_OP_DIGEST),
 			fdstat_op(psm->cfd, FDSTAT_DIGEST));
 	    xx = fsmTeardown(fi->fsm);
+
+if (rc) {
+fprintf(stderr, "==> FAIL: Fstrerror(%p) %s errno(%d) %s\n", psm->cfd, Fstrerror(psm->cfd), errno, strerror(errno));
+}
 
 	    saveerrno = errno; /* XXX FIXME: Fclose with libio destroys errno */
 	    xx = Fclose(psm->cfd);
